--- a/index.html
+++ b/index.html
@@ -22,22 +22,32 @@
 				</ul>
 			</nav>
 			<aside class="d-flex justify-content-between align-items-center col-3 col-md-2 col-xl-1">
-				<svg 
-					xmlns="http://www.w3.org/2000/svg" 
-					fill="currentColor" 
-					class="bi bi-linkedin text-white socialLink" 
-					viewBox="0 0 16 16"
+				<a 
+					href="https://www.linkedin.com/in/jonathan-viault-1183b3188/"
+					target="_blank"	
 				>
-					<path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/>
-				</svg>
-				<svg 
-					xmlns="http://www.w3.org/2000/svg"  
-					fill="currentColor" 
-					class="bi bi-github text-white socialLink" 
-					viewBox="0 0 16 16"
+					<svg 
+						xmlns="http://www.w3.org/2000/svg" 
+						fill="currentColor" 
+						class="bi bi-linkedin text-white socialLink" 
+						viewBox="0 0 16 16"
+					>
+						<path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/>
+					</svg>
+				</a>
+				<a 
+					href="https://github.com/jojogames632?tab=repositories&type=source"
+					target="_blank"
 				>
-					<path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
-				</svg>
+					<svg 
+						xmlns="http://www.w3.org/2000/svg"  
+						fill="currentColor" 
+						class="bi bi-github text-white socialLink" 
+						viewBox="0 0 16 16"
+					>
+						<path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
+					</svg>
+				</a>
 			</aside>
 		</header>
 
@@ -48,6 +58,13 @@
 				class="row row-cols-1 row-cols-lg-3 aboutMeArea"
 				id="aboutMeAnchor"	
 			>
+			<div class="col d-flex justify-content-center align-items-center">
+				<img 
+					src="./images/jonathan.jpg" 
+					alt="courbe de progression haussiere" 
+					class="profileImage my-5"	
+				/>
+			</div>
 				<div class="col text-center mt-4 d-flex flex-column justify-content-center">
 					<h1 class="aboutMeTitle">
 						Jonathan Viault
@@ -81,13 +98,6 @@
 						</div>
 					</div>
 				</div>
-				<div class="col d-flex justify-content-center">
-					<img 
-						src="./images/growth.jpeg" 
-						alt="courbe de progression haussiere" 
-						class="growthImage my-5"	
-					/>
-				</div>
 			</section>
 			<!-- Projects -->
 			<section 
@@ -97,19 +107,18 @@
 				<h2 class="w-100 text-white text-center my-4">Projets</h2>
 				<div class="col d-flex flex-column align-items-center">
 					<div class="projectContainer projectContainer1 mt-3"></div>
-					<div class="projectInfosContainer">
-						<p class="text-center text-white mt-3">ECF blanc</p>
-						<p class="text-center text-white">(symfony / html / css / js)</p>
-						<div class="d-flex justify-content-between">
+					<div class="projectInfosContainer mt-3">
+						<p class="text-center languageInfo">(symfony / html / css / js)</p>
+						<div class="d-flex justify-content-between fw-bold">
 							<a 
-								href="https://trtconseil.herokuapp.com/"
+								href="https://photo-react-app.herokuapp.com/"
 								target="_blank"	
 							>
 								<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-link" viewBox="0 0 16 16">
 									<path d="M6.354 5.5H4a3 3 0 0 0 0 6h3a3 3 0 0 0 2.83-4H9c-.086 0-.17.01-.25.031A2 2 0 0 1 7 10.5H4a2 2 0 1 1 0-4h1.535c.218-.376.495-.714.82-1z"/>
 									<path d="M9 5.5a3 3 0 0 0-2.83 4h1.098A2 2 0 0 1 9 6.5h3a2 2 0 1 1 0 4h-1.535a4.02 4.02 0 0 1-.82 1H12a3 3 0 1 0 0-6H9z"/>
 								</svg>
-								Recherche d'emploi
+								Site d'un photographe en React
 							</a>
 							<a 
 								href="https://github.com/jojogames632/trtconseil"
@@ -125,10 +134,9 @@
 				</div>
 				<div class="col d-flex flex-column align-items-center">
 					<div class="projectContainer projectContainer2 mt-3"></div>
-					<div class="projectInfosContainer">
-						<p class="text-center text-white mt-3">ECF</p>
-						<p class="text-center text-white">(symfony / html / css / asynchrone js)</p>
-						<div class="d-flex justify-content-between">
+					<div class="projectInfosContainer mt-3">
+						<p class="text-center languageInfo">(symfony / asynchrone js)</p>
+						<div class="d-flex justify-content-between fw-bold">
 							<a 
 								href="https://mediatheque-studi.herokuapp.com/login"
 								target="_blank"
@@ -149,26 +157,29 @@
 								Code source
 							</a>
 						</div>
+						<p class="text-center text-white logins">(email : test@gmail.com - mdp : testtest)</p>
 					</div>
 				</div>
 				<div class="col d-flex flex-column align-items-center">
 					<div class="projectContainer projectContainer3 mt-3"></div>
-					<div class="projectInfosContainer">
-						<p class="text-center text-white mt-3">Projet personnel</p>
-						<p class="text-center text-white">(html / css / js)</p>
-						<div class="d-flex justify-content-between">	
-							<a href="#">
+					<div class="projectInfosContainer mt-3">
+						<p class="text-center languageInfo">(javascript)</p>
+						<div class="d-flex justify-content-between fw-bold">	
+							<a 
+								href="https://hardcore-wozniak-4080d9.netlify.app/" 
+								target="_blank"
+							>
 								<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-link" viewBox="0 0 16 16">
 									<path d="M6.354 5.5H4a3 3 0 0 0 0 6h3a3 3 0 0 0 2.83-4H9c-.086 0-.17.01-.25.031A2 2 0 0 1 7 10.5H4a2 2 0 1 1 0-4h1.535c.218-.376.495-.714.82-1z"/>
 									<path d="M9 5.5a3 3 0 0 0-2.83 4h1.098A2 2 0 0 1 9 6.5h3a2 2 0 1 1 0 4h-1.535a4.02 4.02 0 0 1-.82 1H12a3 3 0 1 0 0-6H9z"/>
 								</svg>
-								Portfolio
+								Jeu de dés
 							</a>	
-							<a href="#">
+							<a href="https://github.com/jojogames632/eval2">
 								<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-code" viewBox="0 0 16 16">
 									<path d="M5.854 4.854a.5.5 0 1 0-.708-.708l-3.5 3.5a.5.5 0 0 0 0 .708l3.5 3.5a.5.5 0 0 0 .708-.708L2.707 8l3.147-3.146zm4.292 0a.5.5 0 0 1 .708-.708l3.5 3.5a.5.5 0 0 1 0 .708l-3.5 3.5a.5.5 0 0 1-.708-.708L13.293 8l-3.147-3.146z"/>
 								</svg>
-								Code source
+								Code source	
 							</a>
 						</div>
 					</div>
