--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 				>
 					<li><a href="#aboutMeAnchor" class="text-white text-decoration-none fw-bold">À propos</a></li>
 					<li><a href="#projectsAnchor" class="text-white text-decoration-none fw-bold">Projets</a></li>
+					<li><a href="#hobbiesAnchor" class="text-white text-decoration-none fw-bold">Hobbies</a></li>
 					<li><a href="#contactAnchor" class="text-white text-decoration-none fw-bold">Contact</a></li>
 				</ul>
 			</nav>
@@ -55,16 +56,16 @@
 		<main>
 			<!-- About me -->
 			<section 
-				class="row row-cols-1 row-cols-lg-3 aboutMeArea"
+				class="row row-cols-1 row-cols-lg-3 aboutMeArea p-4"
 				id="aboutMeAnchor"	
 			>
-			<div class="col d-flex justify-content-center align-items-center">
-				<img 
-					src="./images/jonathan.jpg" 
-					alt="courbe de progression haussiere" 
-					class="profileImage my-5"	
-				/>
-			</div>
+				<div class="col d-flex justify-content-center align-items-center">
+					<img 
+						src="./images/jonathan.jpg" 
+						alt="courbe de progression haussiere" 
+						class="profileImage my-5"	
+					/>
+				</div>
 				<div class="col text-center mt-4 d-flex flex-column justify-content-center">
 					<h1 class="aboutMeTitle">
 						Jonathan Viault
@@ -93,12 +94,17 @@
 							<div class="reactFill"></div>
 						</div>
 						<span>Adobe XD</span>
-						<div class="adobeContainer">
+						<div class="adobeContainer mb-2">
 							<div class="adobeFill"></div>
+						</div>
+						<span>Bootstrap</span>
+						<div class="bootstrapContainer">
+							<div class="bootstrapFill"></div>
 						</div>
 					</div>
 				</div>
 			</section>
+
 			<!-- Projects -->
 			<section 
 				id="projectsAnchor"
@@ -106,9 +112,13 @@
 			>
 				<h2 class="w-100 text-white text-center my-4">Projets</h2>
 				<div class="col d-flex flex-column align-items-center">
-					<div class="projectContainer projectContainer1 mt-3"></div>
+					<img 
+						src="images/photo-react-app.png" 
+						alt="project photo" 
+						class="projectContainer mt-3" 
+					/>
 					<div class="projectInfosContainer mt-3">
-						<p class="text-center languageInfo">(symfony / html / css / js)</p>
+						<p class="text-center languageInfo">(React JS)</p>
 						<div class="d-flex justify-content-between fw-bold">
 							<a 
 								href="https://photo-react-app.herokuapp.com/"
@@ -121,7 +131,7 @@
 								Site d'un photographe en React
 							</a>
 							<a 
-								href="https://github.com/jojogames632/trtconseil"
+								href="https://github.com/jojogames632/photo"
 								target="_blank"								
 							>
 								<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-code" viewBox="0 0 16 16">
@@ -133,9 +143,44 @@
 					</div>
 				</div>
 				<div class="col d-flex flex-column align-items-center">
-					<div class="projectContainer projectContainer2 mt-3"></div>
+					<img 
+						src="images/family-re7.png" 
+						alt="project family recette" 
+						class="projectContainer mt-3" 
+					/>
 					<div class="projectInfosContainer mt-3">
-						<p class="text-center languageInfo">(symfony / asynchrone js)</p>
+						<p class="text-center languageInfo">(Symfony / MySQL / Asynchrone JS)</p>
+						<div class="d-flex justify-content-between fw-bold">
+							<a 
+								href="https://family-re7.herokuapp.com/"
+								target="_blank"
+							>
+								<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-link" viewBox="0 0 16 16">
+									<path d="M6.354 5.5H4a3 3 0 0 0 0 6h3a3 3 0 0 0 2.83-4H9c-.086 0-.17.01-.25.031A2 2 0 0 1 7 10.5H4a2 2 0 1 1 0-4h1.535c.218-.376.495-.714.82-1z"/>
+									<path d="M9 5.5a3 3 0 0 0-2.83 4h1.098A2 2 0 0 1 9 6.5h3a2 2 0 1 1 0 4h-1.535a4.02 4.02 0 0 1-.82 1H12a3 3 0 1 0 0-6H9z"/>
+								</svg>
+								Application de recettes
+							</a>
+							<a 
+								href="https://github.com/jojogames632/re7"
+								target="_blank"	
+							>
+								<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-code" viewBox="0 0 16 16">
+									<path d="M5.854 4.854a.5.5 0 1 0-.708-.708l-3.5 3.5a.5.5 0 0 0 0 .708l3.5 3.5a.5.5 0 0 0 .708-.708L2.707 8l3.147-3.146zm4.292 0a.5.5 0 0 1 .708-.708l3.5 3.5a.5.5 0 0 1 0 .708l-3.5 3.5a.5.5 0 0 1-.708-.708L13.293 8l-3.147-3.146z"/>
+								</svg>
+								Code source
+							</a>
+						</div>
+					</div>
+				</div>
+				<div class="col d-flex flex-column align-items-center">
+					<img 
+						src="images/mediatheque.png" 
+						alt="project mediatheque" 
+						class="projectContainer mt-3" 
+					/>
+					<div class="projectInfosContainer mt-3">
+						<p class="text-center languageInfo">(symfony / MySQL / Asynchrone JS)</p>
 						<div class="d-flex justify-content-between fw-bold">
 							<a 
 								href="https://mediatheque-studi.herokuapp.com/login"
@@ -161,9 +206,13 @@
 					</div>
 				</div>
 				<div class="col d-flex flex-column align-items-center">
-					<div class="projectContainer projectContainer3 mt-3"></div>
+					<img 
+						src="images/jsGame.png" 
+						alt="project dice game" 
+						class="projectContainer mt-3" 
+					/>
 					<div class="projectInfosContainer mt-3">
-						<p class="text-center languageInfo">(javascript)</p>
+						<p class="text-center languageInfo">(Javascript)</p>
 						<div class="d-flex justify-content-between fw-bold">	
 							<a 
 								href="https://hardcore-wozniak-4080d9.netlify.app/" 
@@ -175,7 +224,10 @@
 								</svg>
 								Jeu de dés
 							</a>	
-							<a href="https://github.com/jojogames632/eval2">
+							<a 
+								href="https://github.com/jojogames632/eval2"
+								target="_blank"	
+							>
 								<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-code" viewBox="0 0 16 16">
 									<path d="M5.854 4.854a.5.5 0 1 0-.708-.708l-3.5 3.5a.5.5 0 0 0 0 .708l3.5 3.5a.5.5 0 0 0 .708-.708L2.707 8l3.147-3.146zm4.292 0a.5.5 0 0 1 .708-.708l3.5 3.5a.5.5 0 0 1 0 .708l-3.5 3.5a.5.5 0 0 1-.708-.708L13.293 8l-3.147-3.146z"/>
 								</svg>
@@ -185,9 +237,59 @@
 					</div>
 				</div>
 			</section>
+
+			<!-- Hobbies -->
+			<section 
+				class="row hobbiesArea p-4"
+				id="hobbiesAnchor"	
+			>
+				<h2 class="text-center my-4">Hobbies</h2>
+				<div class="col d-flex flex-column align-items-center mb-2">
+					<img 
+						src="images/douche-froide.jpeg" 
+						alt="douche froide"
+						class="mb-2" 
+					/>
+					Douche froide
+				</div>
+				<div class="col d-flex flex-column align-items-center mb-2">
+					<img 
+						src="images/meditation.jpeg" 
+						alt="meditation"
+						class="mb-2" 
+					/>
+					Méditation
+				</div>
+				<div class="col d-flex flex-column align-items-center mb-2">
+					<img 
+						src="images/musculation.jpg" 
+						alt="musculation"
+						class="mb-2" 
+					/>
+					Musculation
+				</div>
+				<div class="col d-flex flex-column align-items-center mb-2">
+					<img 
+						src="images/lecture.jpg" 
+						alt="lecture"
+						class="mb-2" 
+					/>
+					Lecture
+				</div>
+				<div class="col d-flex flex-column align-items-center mb-2">
+					<img 
+						src="images/salade.jpg" 
+						alt="nutrition"
+						class="mb-2" 
+					/>
+					Nutrition
+				</div>
+			</section>
+
+			<!-- Contact page -->
 			<section 
 				id="contactAnchor"
-				class="row"	
+				class="row text-white"	
 			>
 				<h2 class="text-center my-4">Contact</h2>
 				<div class="col">
