Change button and info-text colors in contact section to match graphical charter

--- a/index.html
+++ b/index.html
@@ -308,9 +308,9 @@
 						<label for="message">Message</label>
 						<textarea rows="10" cols="30" name="message"></textarea>
 						<div class="text-center mt-4">
-							<input type="submit" class="btn btn-sm btn-primary">
+							<input type="submit" class="btn btn-sm" id="submitBtn">
 						</div>
-						<p class="text-primary text-center mt-2">Boite mail consultée quotidiennement ✅</p>
+						<p class="text-center mt-2 contactInfo">Boite mail consultée quotidiennement ✅</p>
 					</form>
 				</div>
 			</section>
