Add portfolio project in projects section

--- a/index.html
+++ b/index.html
@@ -236,6 +236,37 @@
 						</div>
 					</div>
 				</div>
+				<div class="col d-flex flex-column align-items-center">
+					<img 
+						src="images/portfolio.png" 
+						alt="project portfolio" 
+						class="projectContainer mt-3" 
+					/>
+					<div class="projectInfosContainer mt-3">
+						<p class="text-center languageInfo">(Bootstrap)</p>
+						<div class="d-flex justify-content-between fw-bold">	
+							<a 
+								href="" 
+								target="_blank"
+							>
+								<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-link" viewBox="0 0 16 16">
+									<path d="M6.354 5.5H4a3 3 0 0 0 0 6h3a3 3 0 0 0 2.83-4H9c-.086 0-.17.01-.25.031A2 2 0 0 1 7 10.5H4a2 2 0 1 1 0-4h1.535c.218-.376.495-.714.82-1z"/>
+									<path d="M9 5.5a3 3 0 0 0-2.83 4h1.098A2 2 0 0 1 9 6.5h3a2 2 0 1 1 0 4h-1.535a4.02 4.02 0 0 1-.82 1H12a3 3 0 1 0 0-6H9z"/>
+								</svg>
+								Portfolio
+							</a>	
+							<a 
+								href="https://github.com/jojogames632/portfolio"
+								target="_blank"	
+							>
+								<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-code" viewBox="0 0 16 16">
+									<path d="M5.854 4.854a.5.5 0 1 0-.708-.708l-3.5 3.5a.5.5 0 0 0 0 .708l3.5 3.5a.5.5 0 0 0 .708-.708L2.707 8l3.147-3.146zm4.292 0a.5.5 0 0 1 .708-.708l3.5 3.5a.5.5 0 0 1 0 .708l-3.5 3.5a.5.5 0 0 1-.708-.708L13.293 8l-3.147-3.146z"/>
+								</svg>
+								Code source	
+							</a>
+						</div>
+					</div>
+				</div>
 			</section>
 
 			<!-- Hobbies -->
