Add developpement personnel in hobbies section

--- a/index.html
+++ b/index.html
@@ -315,6 +315,14 @@
 					/>
 					Nutrition
 				</div>
+				<div class="col d-flex flex-column align-items-center mb-2">
+					<img 
+						src="images/go-up.jpg" 
+						alt="developpement personnel"
+						class="mb-2" 
+					/>
+					Développement personnel
+				</div>
 			</section>
 
 			<!-- Contact page -->
